tests/snapshots/regression/recovery__missing_closer_then_continue.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/missing_closer_then_continue.flx
exit_code: 1

[ 1 of 12] Compiling  Assert
[ 2 of 12] Compiling  Debug
[ 3 of 12] Compiling  Array
[ 4 of 12] Compiling  List
[ 5 of 12] Compiling  Either
[ 6 of 12] Compiling  IO
[ 7 of 12] Compiling  Math
[ 8 of 12] Compiling  Numeric
[ 9 of 12] Compiling  Option
[10 of 12] Compiling  Primops
[11 of 12] Compiling  String
• 1 error • tests/fixtures/recovery/missing_closer_then_continue.flx
error[E076]: Missing Closing Delimiter

Expected a closing `]` to match this opening `[`.

  tests/fixtures/recovery/missing_closer_then_continue.flx:1:9
  |
1 | let a = [1, 2, 3;
  |         ^

note: Expected `]` before this token.
  tests/fixtures/recovery/missing_closer_then_continue.flx:1:17
  |
1 | let a = [1, 2, 3;
  |                 ^
